--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@
   padding: 15px;
   background: white;
 }
+.input {
+  padding: 10px;
+  font-size: 1rem;
+  display: block;
+  margin: 20px auto;
+  width: 600px;
+  border: 2px solid #555;
+  border-radius: 3px;
+}
